--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,18 +1,21 @@
 [uwsgi]
 home=/home/nnm/.virtualenvs/musiclib/
-wsgi-file=musiclib/wsgi.py
-chdir=%d
 master=True
-disable-logging=True
 vacuum=True
+chdir=%d
+wsgi-file=%d/musiclib/wsgi.py
+logto=%d/run/%n.log
 pidfile=%d/run/%n.pid
 max-requests=5000
-# socket=127.0.0.1:49001
 processes=2
-http=:8000
 
-# pythonpath=/home/project
-# env=DJANGO_SETTINGS_MODULE=app.settings
-# module = django.core.handlers.wsgi:WSGIHandler()
+[standalone]
+ini=:uwsgi
+http=:8000
+static-map=/static=%d/static_root/
+
+[socket]
+ini=:uwsgi
+socket=%d/run/uwsgi.sock
+# static-map=/musiclib/static=%d/static_root/
 # touch-reload=/tmp/project.txt
-# uwsgi --http :8000 --home /home/nnm/.virtualenvs/musiclib/ --chdir /home/nnm/projects/musiclib/ --wsgi-file musiclib/wsgi.py --master --processes 4 --threads 2
