--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,8 +4,6 @@ master=True
 vacuum=True
 chdir=%d
 wsgi-file=%d/musiclib/wsgi.py
-logto=%d/run/%n.log
-pidfile=%d/run/%n.pid
 max-requests=5000
 processes=2
 
@@ -13,9 +11,10 @@ processes=2
 ini=:uwsgi
 http=:8000
 static-map=/static=%d/static_root/
+pidfile=%d/run/%n.standalone.pid
 
 [socket]
 ini=:uwsgi
 socket=%d/run/uwsgi.sock
-# static-map=/musiclib/static=%d/static_root/
-# touch-reload=/tmp/project.txt
+logto=%d/run/%n.log
+pidfile=%d/run/%n.socket.pid
