--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -18,3 +18,6 @@ ini=:uwsgi
 socket=%d/run/uwsgi.sock
 logto=%d/run/%n.log
 pidfile=%d/run/%n.socket.pid
+chmod-socket=664
+uid=www-data
+gid=www-data
